# summarization_api

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  sample_text.txt  schema.sql  texts.db
summarization_api/: model.py  storage_utils.py  views.py
tests/: common.py  test_storage_utils.py  test_views.py
