[tool.poetry]
name = "summarization_api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
gensim = "3.8.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.4"
mypy = "^0.971"
requests = "^2.28.1"
pytest-cov = "^3.0.0"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
